k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: inspire
  labels:
    app.kubernetes.io/part-of: inspire-app
